# Payment-Application-in-C

./: CMakeLists.txt  README.md
Application/: app.c  app.h
Card/: card.c  card.h
Data Types/: dataTypes.h
Server/: server.c  server.h
Terminal/: terminal.c  terminal.h
